fix: align text title card

--- a/src/components/productCard/productCard.scss
+++ b/src/components/productCard/productCard.scss
@@ -11,9 +11,12 @@
   &__title {
     font-size: 1.5rem;
     color: brown;
-    text-align: center;
-    border-bottom: 1px solid gray;
     width: 100%;
+    height: 65px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
   }
 
   &__category {
@@ -25,7 +28,7 @@
   &__img {
     object-fit: cover;
     width: 100%;
-    height: 300px;
+    height: 330px;
   }
 
   &__buttons {
