--- a/src/components/productItemPage/productItemPage.scss
+++ b/src/components/productItemPage/productItemPage.scss
@@ -43,6 +43,7 @@
 
     &_img{
       width: 31.3%;
+      object-fit: cover;
       margin-right: 17px;
       aspect-ratio: 1/1;
       cursor: pointer;
